[gd_scene load_steps=14 format=3 uid="uid://cduuy23o3u6s7"]

[ext_resource type="Script" uid="uid://cjf0lj6ht4126" path="res://script/decrypt.gd" id="1_2ji2i"]

[sub_resource type="LabelSettings" id="LabelSettings_2ji2i"]
font_size = 116

[sub_resource type="Animation" id="Animation_dqury"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PointDelta:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(116, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PointDelta:label_settings:font_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PointDelta:label_settings:font_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PointDelta:label_settings:font_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PointDelta:label_settings:font_color:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_blc86"]
resource_name = "points_add"
length = 0.701
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PointDelta:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(1, 0, 0, 0.16666667, 19.333334, 116, -0.25, 0, 0.25, 0, 100, -0.08888888, 19.333334, 0, 0),
"times": PackedFloat32Array(0, 0.13333334, 0.4666667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PointDelta:label_settings:font_color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -1.6664466e-05, 0, 0, 0),
"times": PackedFloat32Array(0, 0.46676666)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PointDelta:label_settings:font_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.07777778, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.46666667)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PointDelta:label_settings:font_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.07777778, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.46666667)
}

[sub_resource type="Animation" id="Animation_2ji2i"]
resource_name = "points_sub"
length = 0.701
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PointDelta:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.16666667, 19.333334, 116, -0.25, 0, 0.25, 0, 100, -0.08888888, 19.333334, 0, 0),
"times": PackedFloat32Array(0, 0.13333334, 0.4666667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PointDelta:label_settings:font_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.07777778, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.46666667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PointDelta:label_settings:font_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.07777778, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.46666667)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PointDelta:label_settings:font_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.07777778, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.46666667)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y6uwi"]
_data = {
&"RESET": SubResource("Animation_dqury"),
&"points_add": SubResource("Animation_blc86"),
&"points_sub": SubResource("Animation_2ji2i")
}

[sub_resource type="LabelSettings" id="LabelSettings_blc86"]
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_y6uwi"]

[sub_resource type="Animation" id="Animation_1glcx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:label_settings:font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [56]
}

[sub_resource type="Animation" id="Animation_y6uwi"]
resource_name = "time_flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:label_settings:font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.23333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [60, 56]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qbaxg"]
_data = {
&"RESET": SubResource("Animation_1glcx"),
&"time_flash": SubResource("Animation_y6uwi")
}

[sub_resource type="LabelSettings" id="LabelSettings_1glcx"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_dqury"]
font_size = 146
font_color = Color(1, 0, 0, 1)

[node name="Decrypt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ji2i")

[node name="PointDelta" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -139.0
offset_right = 69.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(68, 35)
theme_override_colors/font_color = Color(1, 1, 1, 1)
label_settings = SubResource("LabelSettings_2ji2i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PointDelta"]
root_node = NodePath("../../RemainingCountdown")
libraries = {
&"": SubResource("AnimationLibrary_y6uwi")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 48.0
one_shot = true

[node name="RemainingCountdown" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 101.0
offset_bottom = 72.0
text = "48.0"
label_settings = SubResource("LabelSettings_blc86")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLeftLabel" type="Label" parent="RemainingCountdown"]
z_index = 1
layout_mode = 0
offset_left = 9.0
offset_top = -27.0
offset_right = 107.0
offset_bottom = 43.0
text = "TIME LEFT"
label_settings = SubResource("LabelSettings_y6uwi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="RemainingCountdown"]
libraries = {
&"": SubResource("AnimationLibrary_qbaxg")
}

[node name="Points" type="Label" parent="."]
layout_mode = 0
offset_left = 1053.0
offset_top = 3.0
offset_right = 1151.0
offset_bottom = 73.0
text = "0"
label_settings = SubResource("LabelSettings_1glcx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointsLabel" type="Label" parent="Points"]
z_index = 1
layout_mode = 0
offset_left = 1.0
offset_top = -28.0
offset_right = 99.0
offset_bottom = 42.0
text = "SCORE"
label_settings = SubResource("LabelSettings_y6uwi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 129.0
offset_right = 1066.0
offset_bottom = 646.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="Recipe" type="TextEdit" parent="ScrollContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
text = "hello there"
editable = false
selecting_enabled = false
wrap_mode = 1
caret_multiple = false

[node name="StartCountdown" type="Label" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 75.0
offset_right = 779.0
offset_bottom = 363.0
label_settings = SubResource("LabelSettings_dqury")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="on_timer_expire"]
[connection signal="caret_changed" from="ScrollContainer/Recipe" to="." method="_on_caret_changed"]
